src/objects/Sales_Area_Information__c.object
<CustomObject>
    <fields>
        <fullName>Phone_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostNord_Company_Name__c</fullName>
        <label>PostNord Company</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F063</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F074</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F091</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F092</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F054</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F367</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Group_Name__c</fullName>
        <label>Price Group</label>
        <picklist>
            <picklistValues>
                <fullName>Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Hierarchy__c</fullName>
        <label>Pricing Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Segment_Change__c</fullName>
        <label>Reason for Segment Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Information_Compound_SFID__c</fullName>
        <description>This is a compound key of the Sales Organisation ID, Distribution Channel ID, Division ID and the Accounts Involved Party ID.</description>
        <externalId>true</externalId>
        <label>Sales Area Information Compound SFID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Group_Name__c</fullName>
        <label>Sales Group</label>
        <picklist>
            <controllingField>Sales_Office_Name__c</controllingField>
            <picklistValues>
                <fullName>011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>041</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>043</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>044</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>046</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>051</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>052</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>053</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>067</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>071</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>072</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>073</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>091</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>092</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>093</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>094</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>095</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>096</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>097</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>504</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>505</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Mode__c</fullName>
        <label>Sales Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Z01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z04</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Name__c</fullName>
        <label>Sales Office</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>1100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK55</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Search_for_IDs__c</fullName>
        <description>For searching purposes only - populated by workflow, a concatenation of all IDs from the related account</description>
        <label>Search for IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamps_Customer_Type__c</fullName>
        <label>Stamps Customer Type</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>Post Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamp Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Z1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z1C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z1D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z3D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z4D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeting_areas__c</fullName>
        <label>Targeting areas</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nationwide market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.fl.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tax_Category__c</fullName>
        <label>Tax Category</label>
        <picklist>
            <picklistValues>
                <fullName>MWST</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Segment__c</fullName>
        <label>Top Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Z01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z04</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Classification__c</fullName>
        <label>VAT Classification</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Country__c</fullName>
        <label>VAT Country</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vedvarende_flytninger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vedvarende flytninger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Record__c</fullName>
        <description>Clickable Info icon to replace auto number ID in list views</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;View info&quot;))</formula>
        <label>View Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Site_Newsletter__c</fullName>
        <label>Work Site Newsletter</label>
        <picklist>
            <controllingField>Sales_Area__c</controllingField>
            <picklistValues>
                <fullName>Info Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter German</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>X9_levering_til_d_r__c</fullName>
        <defaultValue>false</defaultValue>
        <label>§9 levering til dør</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eBoks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eBoks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eBusiness_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eBusiness Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eCommerce_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eCommerce Business</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Area Information</label>
    <nameField>
        <displayFormat>SAI-{000000}</displayFormat>
        <label>Sales Area Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Area Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CS_Profiles_cannot_convert_to_Customer</fullName>
        <active>false</active>
        <description>Any user with a CS profile cannot set Type on SAI to Customer. CS profile names are stored in a custom setting</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Customer&apos;) &amp;&amp;
CONTAINS($Profile.Name,  $Setup.Get2OneCRM__c.Customer_Service_Profile_Names__c)  
&amp;&amp; 
$Setup.DisableAutomation__c.Disable_All_Validation_Rules__c != true</errorConditionFormula>
        <errorMessage>You are a Customer Service user. Customer Service users cannot convert a Prospect to a Customer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_customer_to_prospect</fullName>
        <active>true</active>
        <description>Once a Sales Area Information has been set to Customer it cannot be changed back to Prospect</description>
        <errorConditionFormula>AND (ISPICKVAL(Type__c, &apos;Prospect&apos;), ISPICKVAL(PRIORVALUE(Type__c),&apos;Customer&apos;)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You cannot change a Customer to a Prospect</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Convert_to_Customer_Check</fullName>
        <active>true</active>
        <description>If Type is changed to customer and account is a WS and it doesn&apos;t have a parent LE then give an error (WS must have LE to be a customer)</description>
        <errorConditionFormula>AND(ISPICKVAL(Type__c , &apos;Customer&apos;),
Account__r.RecordType.Name = &apos;Work Site&apos;,
Account__r.Parent.RecordType.Name != &apos;Legal Entity&apos;) 
&amp;&amp;
Account__r.Converted_From_Webshop_Dummy__c != true
&amp;&amp; 
$Setup.DisableAutomation__c.Disable_All_Validation_Rules__c != true</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You cannot convert this Work Site to a customer as it does not have a Legal Entity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Account_field_after_create</fullName>
        <active>true</active>
        <description>Account is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Account__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account may not be updated. If you need to update Account please create a new Sales Area Information record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Area_Cannot_be_Changed</fullName>
        <active>true</active>
        <description>Once a Sales Area Information record has been created, the Sales Area field cannot be changed</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Sales_Area__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Sales_Area__c</errorDisplayField>
        <errorMessage>Sales Area cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Area_must_be_PDK_BE_PDK_LO_LO_DK</fullName>
        <active>true</active>
        <description>For Breve rollout only sales areas PDK BE, LO DK and PDK LO can be sent to SAP. REMOVE/UPDATE THIS RULE WHEN FURTHER BUSINESS AREAS COME ONLINE</description>
        <errorConditionFormula>OR( ISPICKVAL( Sales_Area__c , &apos;FO91&apos;),
ISPICKVAL( Sales_Area__c , &apos;FO92&apos;),
ISPICKVAL( Sales_Area__c , &apos;0630&apos;),
ISPICKVAL( Sales_Area__c , &apos;4000&apos;),
ISPICKVAL( Sales_Area__c , &apos;3670&apos;),
ISPICKVAL( Sales_Area__c , &apos;LO NO&apos;)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Sales_Area__c</errorDisplayField>
        <errorMessage>Sales Area must be PDK BE or LO DK</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_is_mandatory</fullName>
        <active>true</active>
        <description>Type field is mandatory - validation rule to catch API inserts/updates</description>
        <errorConditionFormula>ISBLANK (TEXT(Type__c)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is mandatory</errorMessage>
    </validationRules>
</CustomObject>